--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
 		"@types/node": "^16.7.13",
 		"@types/react": "^19.0.0",
 		"@types/react-dom": "^19.0.0",
+		"gsap": "^3.13.0",
 		"mapbox-gl": "^3.16.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
@@ -46,6 +47,7 @@
 		]
 	},
 	"devDependencies": {
+		"@tailwindcss/cli": "^4.1.16",
 		"autoprefixer": "^10.4.21",
 		"postcss": "^8.5.6",
 		"tailwindcss": "^4.1.16"
